--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+@import 'node_modules/vuejs-noty-2/dist/vuejs-noty.css';
+
 /* cyrillic-ext */
 @font-face {
     font-family: 'Exo 2';
@@ -73,4 +75,12 @@ a {
 
 .of-cover {
     object-fit: cover;
+}
+
+.vh-100 {
+    height: 100vh;
+}
+
+.noty_has_timeout .noty_progressbar {
+    height: 5px !important;
 }
